[project]
name = "meowgent"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler==3.11.0",
    "ccxt==3.0.76",
    "discord-py==2.6.4",
    "firebase-admin==6.6.0",
    "google-search-results==2.4.2",
    "langchain-core==0.3.33",
    "langchain-openai==0.3.3",
    "langgraph==0.2.69",
    "pydantic==2.10.6",
    "python-dotenv==1.0.1",
    "pytz==2024.2",
    "requests==2.32.4",
]
