[project]
name = "meowgent"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler==3.11.0",
    "discord-py==2.6.4",
    "google-search-results==2.4.2",
    "openai==1.107.2",
    "python-dotenv==1.2.2",
    "pytz==2024.2",
    "requests==2.33.0",
]
